--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p> A US airman has died after setting himself on fire in front of the Israeli embassy in Washington DC on Sunday, shouting "free Palestine". </p>  
 
-  <img src="H:\Website 2J Computing Science\28kim5-videoSixteenByNineJumbo1600 modified..jpg">
+  <img src="H:\5UZ7TB5SONMSHCTFXCYOBQPKDY.jpg">
 
 </body> 
  
